@@ -3,7 +3,8 @@ use Moose;
 use namespace::autoclean;
 use Try::Tiny;
 use File::ChangeNotify;
-use Net::Stomp::MooseHelpers::ReadTrace;
+use Net::Stomp::MooseHelpers::ReadTrace 1.7;
+use Path::Class;
 extends 'Plack::Handler::Stomp';
 
 # ABSTRACT: like L<Plack::Handler::Stomp>, but without a network
@@ -15,14 +16,8 @@ extends 'Plack::Handler::Stomp';
     subscriptions => [
       { destination => '/queue/plack-handler-stomp-test' },
       { destination => '/topic/plack-handler-stomp-test',
-        headers => {
-            selector => q{custom_header = '1' or JMSType = 'test_foo'},
-        },
         path_info => '/topic/ch1', },
       { destination => '/topic/plack-handler-stomp-test',
-        headers => {
-            selector => q{custom_header = '2' or JMSType = 'test_bar'},
-        },
         path_info => '/topic/ch2', },
     ],
   });
@@ -58,6 +53,29 @@ sub _default_servers {
     } ]
 }
 
+has subscription_directory_map => (
+    is => 'ro',
+    isa => 'HashRef',
+    default => sub { { } },
+);
+
+after subscribe_single => sub {
+    my ($self,$sub,$headers) = @_;
+
+    my $dest_dir = $self->trace_basedir->subdir(
+        $self->_dirname_from_destination(
+            $headers->{destination}
+        )
+    );
+    $dest_dir->mkpath;
+
+    my $id = $headers->{id};
+
+    $self->subscription_directory_map->{$dest_dir->stringify}=$id;
+
+    return;
+};
+
 =attr C<file_watcher>
 
 Instance of L<File::ChangeNotify::Watcher>, set up to monitor
@@ -73,8 +91,10 @@ has file_watcher => (
 sub _build_file_watcher {
     my ($self) = @_;
 
+    my @directories = keys %{$self->subscription_directory_map};
+
     return File::ChangeNotify->instantiate_watcher(
-        directories => [ $self->trace_basedir->stringify ],
+        directories => \@directories,
         filter => qr{^\d+\.\d+-send-},
     );
 }
@@ -119,12 +139,22 @@ sub frame_loop {
         for my $event (@events) {
             next unless $event->type eq 'create';
             next unless -f $event->path;
-            my $frame = $self->frame_reader
-                ->read_frame_from_filename($event->path);
+            # loop until the reader can get a complete frame, to work
+            # around race conditions between the writer and us
+            my $frame;
+            while (!$frame) {
+                $frame = $self->frame_reader
+                    ->read_frame_from_filename($event->path);
+            }
 
             # messages sent will be of type "SEND", but they would
             # come back ask "MESSAGE" if they passed through a broker
             $frame->command('MESSAGE') if $frame->command eq 'SEND';
+
+            $frame->headers->{subscription} =
+                $self->subscription_directory_map->{
+                    file($event->path)->dir->stringify
+                };
 
             $self->handle_stomp_frame($app, $frame);
 
