@@ -1,4 +1,5 @@
 {{$NEXT}}
+- test Plack::Handler::Stomp::NoNetwork (and make it work!)
 
 1.03      2012-09-03 19:52:02 Europe/London
 - work around complicated VERSION comparison
